--- a/myungho/HomeNect/app/src/main/res/values/strings.xml
+++ b/myungho/HomeNect/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HomeNect</string>
+    <string name="add_user">사용자 등록</string>
+    <string name="add_guest">사용자 추가</string>
+    <string name="add_thing">thing 추가</string>
 </resources>
